--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
     "history": "^4.9.0",
+    "jwt-decode": "^2.2.0",
     "polished": "^3.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
